--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -59,10 +59,8 @@
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
-    "# we don't trust the cell type annotation in this dataset, but still want to map into into our registry\n",
+    "# we don't trust the cell type annotation in this dataset\n",
     "adata.obs.rename(columns={\"cell_type\": \"cell_type_untrusted\"}, inplace=True)\n",
-    "# define the corresponding feature\n",
-    "ln.Feature(name=\"cell_type_untrusted\", dtype=bt.CellType).save()\n",
     "# this is our dataset\n",
     "adata"
    ]
@@ -98,13 +96,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize & validate genes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Let's convert Gene symbols to Ensembl ids via {meth}`~docs:lamindb.models.CanCurate.standardize`. Note that this is a non-unique mapping and the first match is kept because the `keep` parameter in `.standardize()` defaults to `\"first\"`:"
    ]
   },
@@ -133,15 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize & validate cell types"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "None of the cell type names are valid.\n",
-    "We'll now look up the non-validated cell types using the values of the public ontology and create a mapping."
+    "None of the cell type names are valid."
    ]
   },
   {
@@ -158,6 +141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look up the non-validated cell types using the values of the public ontology and create a mapping."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -167,17 +157,18 @@
    },
    "outputs": [],
    "source": [
-    "ct_public_lo = bt.CellType.public().lookup()\n",
+    "cell_types = bt.CellType.public().lookup()\n",
     "name_mapping = {\n",
-    "    \"Dendritic cells\": ct_public_lo.dendritic_cell.name,\n",
-    "    \"CD19+ B\": ct_public_lo.b_cell_cd19_positive.name,\n",
-    "    \"CD4+/CD45RO+ Memory\": ct_public_lo.effector_memory_cd45ra_positive_alpha_beta_t_cell_terminally_differentiated.name,\n",
-    "    \"CD8+ Cytotoxic T\": ct_public_lo.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
-    "    \"CD4+/CD25 T Reg\": ct_public_lo.cd4_positive_cd25_positive_alpha_beta_regulatory_t_cell.name,\n",
-    "    \"CD14+ Monocytes\": ct_public_lo.cd14_positive_monocyte.name,\n",
-    "    \"CD56+ NK\": ct_public_lo.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
-    "    \"CD8+/CD45RA+ Naive Cytotoxic\": ct_public_lo.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
-    "    \"CD34+\": ct_public_lo.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name,\n",
+    "    \"Dendritic cells\": cell_types.dendritic_cell.name,\n",
+    "    \"CD19+ B\": cell_types.b_cell_cd19_positive.name,\n",
+    "    \"CD4+/CD45RO+ Memory\": cell_types.effector_memory_cd45ra_positive_alpha_beta_t_cell_terminally_differentiated.name,\n",
+    "    \"CD8+ Cytotoxic T\": cell_types.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
+    "    \"CD4+/CD25 T Reg\": cell_types.cd4_positive_cd25_positive_alpha_beta_regulatory_t_cell.name,\n",
+    "    \"CD14+ Monocytes\": cell_types.cd14_positive_monocyte.name,\n",
+    "    \"CD56+ NK\": cell_types.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
+    "    \"CD8+/CD45RA+ Naive Cytotoxic\": cell_types.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
+    "    \"CD34+\": cell_types.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name,\n",
+    "    \"CD38-positive naive B cell\": cell_types.cytotoxic_t_cell.name,\n",
     "}"
    ]
   },
@@ -185,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now standardize cell type names using the lookup-based mapper:"
+    "And standardize cell type names using this name mapping:"
    ]
   },
   {
@@ -198,84 +189,15 @@
    },
    "outputs": [],
    "source": [
-    "adata.obs[\"cell_type_untrusted_original\"] = adata.obs[\"cell_type_untrusted\"]\n",
-    "adata.obs[\"cell_type_untrusted\"] = adata.obs[\"cell_type_untrusted_original\"].map(\n",
-    "    name_mapping\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, all cell types are validated:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    adata,\n",
-    "    key=\"scrna/dataset2.h5ad\",\n",
-    "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
-    ").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Re-curate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We review the dataset and find all annotations trustworthy up there being a `'CD38-positive naive B cell'`.\n",
-    "\n",
-    "Inspecting the `name_mapping` in detail tells us `'CD8+/CD45RA+ Naive Cytotoxic'` was erroneously mapped on a B cell.\n",
-    "\n",
-    "Let us correct this and create a `'cell_type'` feature that we can now trust."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name_mapping[\"CD38-positive naive B cell\"] = \"cytotoxic T cell\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.obs[\"cell_type\"] = adata.obs[\"cell_type_untrusted_original\"].map(name_mapping)\n",
+    "adata.obs[\"cell_type\"] = adata.obs[\"cell_type_untrusted\"].map(name_mapping)\n",
     "adata.obs[\"cell_type\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the corresponding feature:"
    ]
   },
   {
@@ -289,6 +211,13 @@
    "outputs": [],
    "source": [
     "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the artifact with cell type and gene annotations:"
    ]
   },
   {
@@ -306,27 +235,8 @@
     "    key=\"scrna/dataset2.h5ad\",\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
     "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
-    ").save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    ").save()\n",
     "artifact_trusted.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Append the dataset to the collection"
    ]
   },
   {
@@ -369,27 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Version 2 of the collection covers significantly more conditions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "View data lineage:"
+    "See data lineage."
    ]
   },
   {
