♻️ Migrate `scrna2` to schema-based curator and simplify heavily (#222)

--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -38,7 +38,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.track(\"ManDYgmftZ8C\")"
+    "ln.track()"
    ]
   },
   {
@@ -61,6 +61,7 @@
     "adata = ln.core.datasets.anndata_pbmc68k_reduced()\n",
     "# we don't trust the cell type annotation in this dataset\n",
     "adata.obs.rename(columns={\"cell_type\": \"cell_type_untrusted\"}, inplace=True)\n",
+    "# this is our dataset\n",
     "adata"
    ]
   },
@@ -68,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a curator:"
+    "We can't save it in validated form."
    ]
   },
   {
@@ -81,20 +82,14 @@
    },
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.symbol,\n",
-    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
-    "    organism=\"human\",\n",
-    ")\n",
-    "curator.validate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Standardize & validate genes ![](https://img.shields.io/badge/Validate-10b981) "
+    "try:\n",
+    "    ln.Artifact.from_anndata(\n",
+    "        adata,\n",
+    "        key=\"scrna/dataset2.h5ad\",\n",
+    "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    "    ).save()\n",
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -122,18 +117,14 @@
     ")\n",
     "# use ensembl_gene_id as the index\n",
     "adata.var.index.name = \"symbol\"\n",
-    "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")\n",
-    "\n",
-    "# we only want to save data with validated genes\n",
-    "validated = bt.Gene.validate(adata.var.index, bt.Gene.ensembl_gene_id, mute=True)\n",
-    "adata_validated = adata[:, validated].copy()"
+    "adata.var = adata.var.reset_index().set_index(\"ensembl_gene_id\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll use `.raw`:"
+    "None of the cell type names are valid."
    ]
   },
   {
@@ -146,54 +137,14 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.raw = adata.raw[:, validated].to_adata()\n",
-    "adata_validated.raw.var.index = adata_validated.var.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curator = ln.Curator.from_anndata(\n",
-    "    adata_validated,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"cell_type_untrusted\": bt.CellType.name},\n",
-    "    organism=\"human\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curator.validate()"
+    "adata.obs[\"cell_type_untrusted\"].unique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardize & validate cell types ![](https://img.shields.io/badge/Validate-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "None of the cell type names are valid.\n",
-    "We'll now look up the non-validated cell types using the values of the public ontology and create a mapping."
+    "Let's look up the non-validated cell types using the values of the public ontology and create a mapping."
    ]
   },
   {
@@ -206,30 +157,18 @@
    },
    "outputs": [],
    "source": [
-    "curator.non_validated[\"cell_type_untrusted\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "ct_public_lo = bt.CellType.public().lookup()\n",
+    "cell_types = bt.CellType.public().lookup()\n",
     "name_mapping = {\n",
-    "    \"Dendritic cells\": ct_public_lo.dendritic_cell.name,\n",
-    "    \"CD19+ B\": ct_public_lo.b_cell_cd19_positive.name,\n",
-    "    \"CD4+/CD45RO+ Memory\": ct_public_lo.effector_memory_cd45ra_positive_alpha_beta_t_cell_terminally_differentiated.name,\n",
-    "    \"CD8+ Cytotoxic T\": ct_public_lo.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
-    "    \"CD4+/CD25 T Reg\": ct_public_lo.cd4_positive_cd25_positive_alpha_beta_regulatory_t_cell.name,\n",
-    "    \"CD14+ Monocytes\": ct_public_lo.cd14_positive_monocyte.name,\n",
-    "    \"CD56+ NK\": ct_public_lo.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
-    "    \"CD8+/CD45RA+ Naive Cytotoxic\": ct_public_lo.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
-    "    \"CD34+\": ct_public_lo.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name,\n",
+    "    \"Dendritic cells\": cell_types.dendritic_cell.name,\n",
+    "    \"CD19+ B\": cell_types.b_cell_cd19_positive.name,\n",
+    "    \"CD4+/CD45RO+ Memory\": cell_types.effector_memory_cd45ra_positive_alpha_beta_t_cell_terminally_differentiated.name,\n",
+    "    \"CD8+ Cytotoxic T\": cell_types.cd8_positive_alpha_beta_cytotoxic_t_cell.name,\n",
+    "    \"CD4+/CD25 T Reg\": cell_types.cd4_positive_cd25_positive_alpha_beta_regulatory_t_cell.name,\n",
+    "    \"CD14+ Monocytes\": cell_types.cd14_positive_monocyte.name,\n",
+    "    \"CD56+ NK\": cell_types.cd56_positive_cd161_positive_immature_natural_killer_cell_human.name,\n",
+    "    \"CD8+/CD45RA+ Naive Cytotoxic\": cell_types.cd8_positive_alpha_beta_memory_t_cell_cd45ro_positive.name,\n",
+    "    \"CD34+\": cell_types.cd34_positive_cd56_positive_cd117_positive_common_innate_lymphoid_precursor_human.name,\n",
+    "    \"CD38-positive naive B cell\": cell_types.cytotoxic_t_cell.name,\n",
     "}"
    ]
   },
@@ -237,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now standardize cell type names using the lookup-based mapper:"
+    "And standardize cell type names using this name mapping:"
    ]
   },
   {
@@ -250,19 +189,15 @@
    },
    "outputs": [],
    "source": [
-    "adata_validated.obs[\"cell_type_untrusted_original\"] = adata_validated.obs[\n",
-    "    \"cell_type_untrusted\"\n",
-    "]  # copy the original annotations\n",
-    "adata_validated.obs[\"cell_type_untrusted\"] = adata_validated.obs[\n",
-    "    \"cell_type_untrusted_original\"\n",
-    "].map(name_mapping)"
+    "adata.obs[\"cell_type\"] = adata.obs[\"cell_type_untrusted\"].map(name_mapping)\n",
+    "adata.obs[\"cell_type\"].unique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, all cell types are validated:"
+    "Define the corresponding feature:"
    ]
   },
   {
@@ -275,14 +210,14 @@
    },
    "outputs": [],
    "source": [
-    "curator.validate()"
+    "ln.Feature(name=\"cell_type\", dtype=bt.CellType).save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+    "Save the artifact with cell type and gene annotations:"
    ]
   },
   {
@@ -295,108 +230,13 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curator.save_artifact(description=\"10x reference adata\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact.view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Re-curate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We review the dataset and find all annotations trustworthy up there being a `'CD38-positive naive B cell'`.\n",
-    "\n",
-    "Inspecting the `name_mapping` in detail tells us `'CD8+/CD45RA+ Naive Cytotoxic'` was erroneously mapped on a B cell.\n",
-    "\n",
-    "Let us correct this and create a `'cell_type'` feature that we can now trust."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name_mapping[\"CD38-positive naive B cell\"] = \"cytotoxic T cell\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_validated.obs[\"cell_type\"] = adata_validated.obs[\n",
-    "    \"cell_type_untrusted_original\"\n",
-    "].map(name_mapping)\n",
-    "adata_validated.obs[\"cell_type\"].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact_trusted = ln.Curator.from_anndata(\n",
-    "    adata_validated,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\n",
-    "        \"cell_type\": bt.CellType.name,\n",
-    "        \"cell_type_untrusted\": bt.CellType.name,\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ").save_artifact(\n",
+    "artifact_trusted = ln.Artifact.from_anndata(\n",
+    "    adata,\n",
+    "    key=\"scrna/dataset2.h5ad\",\n",
     "    description=\"10x reference adata, trusted cell type annotation\",\n",
-    "    revises=artifact,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "    schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
+    ").save()\n",
     "artifact_trusted.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Append the dataset to the collection"
    ]
   },
   {
@@ -439,48 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want, you can label the collection's version by setting `.version`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.version = \"2\"\n",
-    "collection_v2.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Version 2 of the collection covers significantly more conditions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection_v2.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "View data lineage:"
+    "See data lineage."
    ]
   },
   {
@@ -499,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
