--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -88,7 +88,7 @@
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
