--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -88,8 +88,8 @@
     "        key=\"scrna/dataset2.h5ad\",\n",
     "        schema=\"ensembl_gene_ids_and_valid_features_in_obs\",\n",
     "    ).save()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
+    "except SystemExit as e:\n",
+    "    print(\"Error captured:\", e)"
    ]
   },
   {
@@ -298,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -312,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
