--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -162,6 +162,7 @@
    },
    "outputs": [],
    "source": [
+    "adata.obs[\"cell_type\"] = bt.CellType.standardize(adata.obs[\"cell_type\"])\n",
     "bt.CellType(name=\"animal cell\").save()"
    ]
   },
@@ -318,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
