--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public gene ontologies through [bionty](https://lamin.ai/docs/bionty).\n",
+    "LaminDB provides access to the following public gene ontologies through [bionty](https://docs.lamin.ai/bionty).\n",
     "\n",
-    "Here we show how to access and search gene ontologies to standardize new data."
+    "Here we show how to access and search gene ontologies."
    ]
   },
   {
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[bionty]'\n",
+    "# pip install lamindb\n",
     "!lamin init --storage ./test-public-ontologies --modules bionty"
    ]
   },
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~bionty.core.BioRecord.public`, which links a default public ontology source from {class}`~docs:bionty.Source`. It's a [PublicOntology](https://lamin.ai/docs/bionty.core.publicontology) object, which you can think about as a public registry:"
+    "Let us create a `PublicOntology` object with {meth}`~bionty.core.BioRecord.public`, which links a default public ontology source from {class}`~docs:bionty.Source`:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As for registries, you can export the ontology as a `DataFrame`:"
+    "Just like you can with registries, you can export the `PublicOntology` object as a `DataFrame`:"
    ]
   },
   {
