📝 Polish 3 "Leverage ontologies" guides and the `gene` guide (#232)
Co-authored-by: Alex Wolf <f.alexander.wolf@gmail.com>

--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -11,12 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lamindb provides access to the following public gene ontologies through [bionty](https://lamin.ai/docs/bionty):\n",
+    "LaminDB provides access to the following public gene ontologies through [bionty](https://docs.lamin.ai/bionty).\n",
     "\n",
-    "1. [Ensembl](https://ensembl.org)\n",
-    "2. [NCBI Gene](https://www.ncbi.nlm.nih.gov/gene)\n",
-    "\n",
-    "Here we show how to access and search gene ontologies to standardize new data."
+    "Here we show how to access and search gene ontologies."
    ]
   },
   {
@@ -25,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[bionty]'\n",
+    "# pip install lamindb\n",
     "!lamin init --storage ./test-public-ontologies --modules bionty"
    ]
   },
@@ -50,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us create a public ontology accessor with {meth}`~bionty.core.BioRecord.public`, which chooses a default public ontology source from {class}`~docs:bionty.Source`. It's a [PublicOntology](https://lamin.ai/docs/bionty.core.publicontology) object, which you can think about as a public registry:"
+    "Let us create a `PublicOntology` object with {meth}`~bionty.core.BioRecord.public`, which links a default public ontology source from {class}`~docs:bionty.Source`:"
    ]
   },
   {
@@ -67,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As for registries, you can export the ontology as a `DataFrame`:"
+    "Just like you can with registries, you can export the `PublicOntology` object as a `DataFrame`:"
    ]
   },
   {
@@ -84,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike registries, you can also export it as a Pronto object via `public.ontology`."
+    "Unlike registries, you can also export it as a Pronto object via `public.to_pronto()`."
    ]
   },
   {
@@ -483,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = bt.Source.get(name=\"ensembl\", version=\"release-112\", organism=\"human\")\n",
+    "source = bt.Source.get(name=\"ensembl\", version=\"release-114\", organism=\"human\")\n",
     "public = bt.Gene.public(source=source)\n",
     "public"
    ]
@@ -511,7 +508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -525,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
